--- a/safe_mode.css
+++ b/safe_mode.css
@@ -217,7 +217,7 @@
 }
 
 .wordmark__5b8c9:hover:before {
-  content: "‏‏‎ c h i l l a x";
+  content: "‏‏‎ s a f e  m o d e";
   letter-spacing: 2px;
 }
 
